Task 2: single change point model – convergence, interpretation, event association

--- a/notebooks/eda-brent-oil-prices.ipynb
+++ b/notebooks/eda-brent-oil-prices.ipynb
@@ -796,6 +796,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5a0563f",
+   "metadata": {},
+   "source": [
+    "## ⚠️ Assumptions, Limitations & Communication Plan\n",
+    "\n",
+    "**Assumptions**\n",
+    "- Daily prices capture major structural breaks\n",
+    "- Log returns ≈ normally distributed\n",
+    "- Events are primary drivers of large shifts\n",
+    "\n",
+    "**Limitations & Correlation vs. Causation**\n",
+    "- **Correlation ≠ Causation** — A change point near an event (e.g. 2022-02) shows **temporal association**, not proof of cause. Confounding factors (speculation, demand shocks, inventories) are common.\n",
+    "- Overlapping events make attribution difficult\n",
+    "- Model assumes abrupt changes — gradual shifts may be missed\n",
+    "\n",
+    "**Communication Plan**\n",
+    "\n",
+    "| Stakeholder         | Preferred Format               | Channel / Deliverable                     |\n",
+    "|---------------------|--------------------------------|--------------------------------------------|\n",
+    "| Investors           | Dashboard + Quantified Report  | Interactive charts, PDF                    |\n",
+    "| Policymakers        | Executive Summary + Report     | PDF + concise slides                       |\n",
+    "| Energy Companies    | Dashboard + Notebook           | Real-time trends, volatility views         |\n",
+    "| Technical Reviewers | GitHub Repository              | Notebooks, README, reproducible code       |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8977cd22",
    "metadata": {},
    "source": [
